--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "date-fns": "^4.1.0",
+    "firebase": "^11.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
