--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@svgr/webpack": "^8.1.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
     "ts-migrate": "^0.1.35"
   }
-  
 }
