--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^11.9.1",
     "lucide-react": "^0.523.0",
     "react": "^18.3.1",
+    "react-calendar-heatmap": "^1.10.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
