--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@svgr/webpack": "^8.1.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
     "ts-migrate": "^0.1.35"
   }
 }
