--- a/functions/.eslintrc.json
+++ b/functions/.eslintrc.json
@@ -16,6 +16,10 @@
     "es2020": true
   },
   "rules": {
-    // お好みで追加・調整可能
+    "@typescript-eslint/no-unsafe-assignment": "off",
+    "@typescript-eslint/no-unsafe-call": "off",
+    "@typescript-eslint/no-unsafe-member-access": "off",
+    "@typescript-eslint/no-unsafe-return": "off",
+    "@typescript-eslint/no-unused-vars": "warn"
   }
 }
