CloudFunctions環境構築・利用規約

--- a/firebase.json
+++ b/firebase.json
@@ -21,8 +21,8 @@
         "*.local"
       ],
       "predeploy": [
-        "npm --prefix functions run lint",
-        "npm --prefix functions run build"
+        "cd functions && npm run lint",
+        "cd functions && npm run build"
       ]
     }
   ]
