--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -8,7 +8,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "rootDir": "src",
-    "lib": ["es2020"],
+    "lib": ["es2020", "dom"],
     "sourceMap": true,
     "esModuleInterop": true, // node‑fetch を default import する場合必須
     "strict": false
