--- a/firebase.json
+++ b/firebase.json
@@ -25,5 +25,20 @@
         "cd functions && npm run build"
       ]
     }
+  ],
+
+  "rewrites": [
+    {
+      "source": "/privacy",
+      "destination": "/privacy.html"
+    },
+    {
+      "source": "/terms",
+      "destination": "/terms.html"
+    },
+    {
+      "source": "**",
+      "destination": "/index.html"
+    }
   ]
 }
