--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/rrule": "^6.1.18",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@google/generative-ai": "^0.24.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
